# gixsql

./: .gitignore  README.md  config.h.in  configure.ac  flake.nix  run_test.sh
gixpp/: Makefile.am
gixsql-tests-nunit/: CompilerConfig.cs  CompilerConfig2.cs  GixSqlDynamicTestRunner.cs  GixSqlTestData.cs  Runner.cs  gixsql_test_local_ocamlpro.xml
gixsql-tests-nunit/data/: gixsql_test_data.xml
libcpputils/: Makefile.am
libcpputils/linq/: linq_iterators.hpp
libgixpp/: ESQLDefinitions.h  Makefile.am  gix_esql_scanner.ll
runtime/libgixsql/: Makefile.am  libgixsql-cpp.vcxproj  utils.h
runtime/libgixsql-mysql/: Makefile.am  libgixsql-mysql.vcxproj  utils.h
runtime/libgixsql-odbc/: Makefile.am  libgixsql-odbc.vcxproj
runtime/libgixsql-oracle/: Makefile.am  libgixsql-oracle.vcxproj
runtime/libgixsql-pgsql/: Makefile.am  libgixsql-pgsql.vcxproj  utils.h
runtime/libgixsql-sqlite/: DbInterfaceSQLite.cpp  DbInterfaceSQLite.h  Makefile.am  libgixsql-sqlite.vcxproj
